qs improvements